--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare sem sed quam tempus aliquet vitae eget dolor. Proin eu ultrices libero. Curabitur vulputate vestibulum elementum. Suspendisse id neque a nibh mollis blandit.<br>
             </p-->
             <br/>
-            <a href="#" class="button">Download resume as PDF format</a> <br/> <img src="images/signature.jpg" class="signature" alt="" />
+            <a href="https://github.com/samshariat/samshariat.github.io/raw/master/CV.pdf" class="button">Download resume as PDF format</a> <br/> <img src="images/signature.jpg" class="signature" alt="" />
         </div>
       </article>
       
