--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Mobile Navigation--> 
     <a href="#menu1" class="menu-link"></a> 
     <!-- Left Navigation-->
-    <nav id="menu1" role="navigation"> <a href="#chapterintroduction"><span id="link_introduction" class="active">Home</span></a> <a href="#chapterabout"><span id="link_about">About</span></a> <a href="#chapterskills"><span id="link_skills">Skills</span></a> <a href="#chapterexperience"><span id="link_experience">Experience</span></a> <!--a href="#chaptereducation"><span id="link_education">Education</span></a!--> <a href="#chapterportfolio"><span id="link_portfolio">Portfolio</span></a><a href="#chaptercontact"><span id="link_contact">Contact</span></a><a href="flashsite"><span id="link_blog">Flash Website</span></a></nav>
+    <nav id="menu1" role="navigation"> <a href="#chapterintroduction"><span id="link_introduction" class="active">Home</span></a> <a href="#chapterabout"><span id="link_about">About</span></a> <a href="#chapterskills"><span id="link_skills">Skills</span></a> <a href="#chapterexperience"><span id="link_experience">Experience</span></a> <!--a href="#chaptereducation"><span id="link_education">Education</span></a!--> <a href="#chapterportfolio"><span id="link_portfolio">Portfolio</span></a><a href="#chaptercontact"><span id="link_contact">Contact</span></a></nav>
     <div class="social"> <a href="https://www.facebook.com/sam.walters93" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a> <a href="https://telegram.me/sam_shariat" target="_blank" class="twitter"><i class="fa fa-paper-plane"></i></a> <a href="https://plus.google.com/u/0/105667086076395000646" target="_blank" class="google-plus"><i class="fa fa-google-plus"></i></a> </div>
     <div class="copyright"> © Sam Shariat.<br>
       All Rights Reserved. </div>
@@ -56,7 +56,7 @@
         <div class="inner">
           <h2><span>HEllo, I'm</span><br>
             Sam Shariat</h2>
-          <span class="title">Mobile Application Developer</span> </div>
+          <span class="title">Application Developer</span> </div>
         <div id="owl-demo" class="owl-carousel">
            <div class="item"><img src="images/804x990.jpg" alt="" /></div>
         </div>
@@ -71,10 +71,9 @@
             <ul>
               <li>Name: Moslem Shariat (Sam)</li>
               <li>Email: <a href="mailto:moslem.shariat@gmail.com">moslem.shariat@gmail.com</a></li>
-              <li>Phone: +98 (912) - 885-5575</li>
+		    <li><a href="tel:+989120284414" >Phone: +98 (912) - 028-4414</a></li>
               <li>Date of birth: 24 February 1993</li>
               <li>Address: Tehran</li>
-              <li>Nationality: Kurdish</li>
             </ul>
             <!--h3>Professional Profile</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare sem sed quam tempus aliquet vitae eget dolor. Proin eu ultrices libero. Curabitur vulputate vestibulum elementum. Suspendisse id neque a nibh mollis blandit.<br>
@@ -89,8 +88,6 @@
         <div class="inner">
           <h2>Skills</h2>
           <div class="title-divider"></div>
-          <h3>Just My Awesome Skills</h3>
-          <p>I have started working with my brothers computer when i was about 5 years old , Well not working , just playing games , but anyways . my profesional work started when i was 16 , and my first completed project was 3 little games for a local show for children in Kermanshah TV .</p>
           <div class="skills-con">
             <div class="container-sub margin-top50">
               <div class="row">
@@ -133,20 +130,21 @@
                   <ul>
                     <li>ActionScript 3</li>
                     <li>Adobe Flash Pro / Adobe Air</li>
-                    <li>PHP & MySQL</li>
+		    <li>React JS / Node JS</li>
+                    
                   </ul>
                 </div>
                 <div class="col-4 margin-top10">
                   <ul>
-                    <li>SQLite and XML</li>
-                    <li>Unity 4 / Javascript</li>
+		    <li>PHP & MySQL</li>
                     <li>HTML5 / CSS / jQuery</li>
+		    <li>SQLite and XML</li>
                   </ul>
                 </div>
                 <div class="col-4 margin-top10">
                   <ul>
-                    <li>Photoshop / Illustrator</li>
-                    <li>Xcode / Objective-C</li>
+                    <li>Progressive Web Apps</li>
+                    <li>React Native</li>
                     <li>Windows/Linux Servers</li>
                   </ul>
                 </div>
@@ -185,7 +183,7 @@
         <div class="inner">
           <h2>Experience</h2>
           <div class="title-divider"></div>
-          <h3>8 Years Experience!</h3>
+          <h3>8 Years Experience</h3>
           <p>Worked with many places / Public-Private sectors / International even as a Freelancer </p>
           <div class="experience-con">
             <div class="container-sub">
@@ -512,7 +510,7 @@
                     <div class="contact-text">
                       <div class="col-2 icon-block phone"><i class="fa fa-phone"></i></div>
                       <div class="flot-left"> <strong>Phone</strong><br>
-                        +98 (912) 885 5575 </div>
+			      <a href="tel:+989120284414">+98 (912) 028 4414 </a></div>
                     </div>
                     <div class="contact-text">
                       <div class="col-2 icon-block email"><i class="fa fa-envelope"></i></div>
