--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
                 <div class="col-6 margin-bottom50">
                   <div class="col-6"><span class="chart" data-percent="75"><span class="percent"></span> </span></div>
                   <div class="col-6 chart-text">
-                    <h5>Multimedia</h5>
-                    <p>Skillful, 2 years</p>
+                    <h5>Web Development</h5>
+                    <p>Skillful, 3 years</p>
                   </div>
                 </div>
                 <div class="col-6">
                   <div class="col-6"><span class="chart" data-percent="95"><span class="percent"></span> </span></div>
                   <div class="col-6 chart-text">
-                    <h5>Technical Expertise</h5>
+                    <h5>Research Expertise</h5>
                     <p>Expert, 8 years</p>
                   </div>
                 </div>
@@ -128,10 +128,9 @@
                 <p>Here are some of things that i know and have been challenged to learn about in my experiences</p>
                 <div class="col-4 margin-top10">
                   <ul>
-                    <li>ActionScript 3</li>
+                    <li>JavaScript / ActionScript 3</li>
                     <li>Adobe Flash Pro / Adobe Air</li>
 		    <li>React JS / Node JS</li>
-                    
                   </ul>
                 </div>
                 <div class="col-4 margin-top10">
@@ -145,7 +144,7 @@
                   <ul>
                     <li>Progressive Web Apps</li>
                     <li>React Native</li>
-                    <li>Windows/Linux Servers</li>
+                    <li>iOS/Android Development</li>
                   </ul>
                 </div>
               </div>
