--- a/index.html
+++ b/index.html
@@ -390,10 +390,10 @@
                       <li>
                         <figure>
                           <figcaption>
-                            <h3>FITNEX</h3>
+                            <h5>FITNEX</h5>
                             <span>Senior Developer</span>
-                            <p>Developed with Adobe Air / Flash Pro / ActionScript3 / Used GPS , Camera , Library (Images/Sound) , Microphone , ... - Back end developed with PHP and MySQL . Some features are : Sport/Diet programs with calendar / Maps / Social Network ( text/picture/voice messaging ) / Character / News / ... </p>
-                            <p> <a href="https://itunes.apple.com/us/app/fitnex/id1090679134?mt=8" > Get it for iOS </a> <br/> <a href="https://play.google.com/store/apps/details?id=air.com.fitnex.club&hl=en" > Get it for Android </a></p>
+                            <p>Some features are : Sport/Diet programs with calendar / Maps / Social Network ( text/picture/voice messaging ) / News / ... </p>
+                            <p> <a href="https://play.google.com/store/apps/details?id=air.com.fitnex.club&hl=en" ><img src="images/googleplay.png" /></a></p>
                           </figcaption>
                           <div id="owl-demo1" class="owl-carousel">
                             <div class="item"><img src="images/portfolio/fitnex/2.jpg" alt="" /></div>
