--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                   <section class="grid-wrap">
                     <ul class="grid">
                       <li>
-                        <figure> <img src="images/portfolio/fitnex/1.jpg" alt=""/>
+                        <figure> <img src="images/portfolio/fitnex/fit1.jpg" alt=""/>
                           <figcaption>
                             <div class="figcaption-details"> <img src="images/icon-plus.png" height="82" width="82" alt="" />
                               <h3>FITNEX</h3>
@@ -341,7 +341,7 @@
                           <figcaption>
                             <div class="figcaption-details"> <img src="images/icon-plus.png" height="82" width="82" alt="" />
                               <h3>FoderArt</h3>
-                              <span>App Developer/Designer</span> </div>
+                              <span>App Developer/UI Designer</span> </div>
                           </figcaption>
                         </figure>
                       </li>
@@ -364,11 +364,38 @@
                         </figure>
                       </li>
                       <li>
-                        <figure> <img src="images/portfolio/primewell/1.jpg" alt=""/>
+                        <figure> <img src="images/portfolio/primewell/primewell.jpg" alt=""/>
                           <figcaption>
                             <div class="figcaption-details"> <img src="images/icon-plus.png" height="82" width="82" alt="" />
                               <h3>Primewell</h3>
                               <span>App Developer</span> </div>
+                          </figcaption>
+                        </figure>
+                      </li>
+			<li>
+                        <figure> <img src="images/portfolio/myweb/hezarazmoon.jpg" alt=""/>
+                          <figcaption>
+                            <div class="figcaption-details"> <img src="images/icon-plus.png" height="82" width="82" alt="" />
+                              <h3>IELTS Simulation</h3>
+                              <span>Developer/UI Designer</span> </div>
+                          </figcaption>
+                        </figure>
+                      </li>
+			<li>
+                        <figure> <img src="images/portfolio/myweb/dart.jpg" alt=""/>
+                          <figcaption>
+                            <div class="figcaption-details"> <img src="images/icon-plus.png" height="82" width="82" alt="" />
+                              <h3>Dart</h3>
+                              <span>Developer/UI Designer</span> </div>
+                          </figcaption>
+                        </figure>
+                      </li>
+			<li>
+                        <figure> <img src="images/portfolio/rafa/rafa.jpg" alt=""/>
+                          <figcaption>
+                            <div class="figcaption-details"> <img src="images/icon-plus.png" height="82" width="82" alt="" />
+                              <h3>Dart</h3>
+                              <span>Developer/UI Designer</span> </div>
                           </figcaption>
                         </figure>
                       </li>
@@ -377,7 +404,7 @@
                           <figcaption>
                             <div class="figcaption-details"> <img src="images/icon-plus.png" height="82" width="82" alt="" />
                               <h3>MyFlashWebsite</h3>
-                              <span>Developer/Designer</span> </div>
+                              <span>Developer/UI Designer</span> </div>
                           </figcaption>
                         </figure>
                       </li>
@@ -393,12 +420,11 @@
                             <h5>FITNEX</h5>
                             <span>Senior Developer</span>
                             <p>Some features are : Sport/Diet programs with calendar / Maps / Social Network ( text/picture/voice messaging ) / News / ... </p>
-                            <p> <a href="https://play.google.com/store/apps/details?id=air.com.fitnex.club&hl=en" ><img src="images/googleplay.png" /></a></p>
+                            <p> <a href="https://play.google.com/store/apps/details?id=air.com.fitnex.club&hl=en" ><img src="images/googleplay.png" height="45" width="129" /></a></p>
                           </figcaption>
                           <div id="owl-demo1" class="owl-carousel">
-                            <div class="item"><img src="images/portfolio/fitnex/2.jpg" alt="" /></div>
-                            <div class="item"><img src="images/portfolio/fitnex/3.jpg" alt="" /></div>
-                            <div class="item"><img src="images/portfolio/fitnex/4.jpg" alt="" /></div>
+                            <div class="item"><img src="images/portfolio/fitnex/fit1.jpg" alt="" /></div>
+                            <div class="item"><img src="images/portfolio/fitnex/fit2.jpg" alt="" /></div>
                           </div>
                         </figure>
                       </li>
