--- a/index.html
+++ b/index.html
@@ -391,10 +391,10 @@
                         </figure>
                       </li>
 			<li>
-                        <figure> <img src="images/portfolio/rafa/rafa.jpg" alt=""/>
+                        <figure> <img src="images/portfolio/myweb/rafa.jpg" alt=""/>
                           <figcaption>
                             <div class="figcaption-details"> <img src="images/icon-plus.png" height="82" width="82" alt="" />
-                              <h3>Dart</h3>
+                              <h3>Rafa Group</h3>
                               <span>Developer/UI Designer</span> </div>
                           </figcaption>
                         </figure>
@@ -420,7 +420,7 @@
                             <h5>FITNEX</h5>
                             <span>Senior Developer</span>
                             <p style="text-transform: none;">Some features are : Sport/Diet programs with calendar / Maps / Social Network ( text/picture/voice messaging ) / News / ... </p>
-                            <p> <a href="https://play.google.com/store/apps/details?id=air.com.fitnex.club&hl=en" ><img src="images/googleplay.png" height="45" width="129" /></a></p>
+                            <p> <a href="https://play.google.com/store/apps/details?id=air.com.fitnex.club&hl=en" ><img class="appstore" src="images/googleplay.png" height="45" width="129" /></a></p>
                           </figcaption>
                           <div id="owl-demo1" class="owl-carousel">
                             <div class="item"><img src="images/portfolio/fitnex/fit1.jpg" alt="" /></div>
@@ -442,7 +442,7 @@
                           <figcaption>
                             <h3>DrWin</h3>
                             <span>App Developer</span>
-                            <p> <a href="https://play.google.com/store/apps/details?id=air.iparsmedia.drwin" ><img src="images/googleplay.png" height="45" width="129" /></a></p>
+                            <p> <a href="https://play.google.com/store/apps/details?id=air.iparsmedia.drwin" ><img class="appstore" src="images/googleplay.png" height="45" width="129" /></a></p>
                           </figcaption>
                           <img src="images/portfolio/drwin/1.jpg" alt="" />
                           
@@ -453,7 +453,7 @@
                           <figcaption>
                             <h5>FoderArt</h5>
                             <span>App Developer/Designer</span>
-                            <p><a href="https://play.google.com/store/apps/details?id=air.com.samshariat.seatcover" ><img src="images/googleplay.png" height="45" width="129" /></a></p>
+                            <p><a href="https://play.google.com/store/apps/details?id=air.com.samshariat.seatcover" ><img class="appstore" src="images/googleplay.png" height="45" width="129" /></a></p>
                           </figcaption>
                           <img src="images/portfolio/foderart/1.jpg" alt=""/></figure>
                       </li>
@@ -482,7 +482,7 @@
                           <figcaption>
                             <h5>Primewell</h5>
                             <span>App Developer</span>
-                             <p><a href="https://apkpure.com/primewell-iran/air.com.iparsmedia.primewell" ><img src="images/googleplay.png" height="45" width="129" /></a></p>
+                             <p><a href="https://apkpure.com/primewell-iran/air.com.iparsmedia.primewell" ><img src="images/googleplay.png" class="appstore" height="45" width="129" /></a></p>
                           </figcaption>
                           <img src="images/portfolio/primewell/primewell.jpg" alt=""/></figure>
                       </li>
@@ -491,7 +491,7 @@
                           <figcaption>
                             <h5>HezarAzmoon IELTS Simulator</h5>
                             <span>App Developer</span>
-                             <p><a href="http://hezarazmoon.com" ><img src="images/googleplay.png" height="45" width="129" /></a></p>
+                             <p><a href="http://hezarazmoon.com" ><img class="appstore" src="images/googleplay.png" height="45" width="129" /></a></p>
                           </figcaption>
                           <img src="images/portfolio/myweb/hezarazmoon.jpg" alt=""/></figure>
                       </li>
@@ -501,7 +501,7 @@
                           <figcaption>
                             <h5>Dart</h5>
                             <span>App Developer</span>
-                             <p><a href="https://apkgk.com/air.com.iparsmedia.dart" ><img src="images/googleplay.png" height="45" width="129" /></a></p>
+                             <p><a href="https://apkgk.com/air.com.iparsmedia.dart" ><img class="appstore" src="images/googleplay.png" height="45" width="129" /></a></p>
                           </figcaption>
                           <img src="images/portfolio/myweb/dart.jpg" alt=""/></figure>
                       </li>
@@ -509,8 +509,8 @@
 			    <li>
                         <figure>
                           <figcaption>
-                            <h5>Rafa</h5>
-                            <span>App Developer</span>
+                            <h5>Rafa Group</h5>
+                            <span>Web Developer</span>
                              <p><a href="http://rafa-group.com" >See Website</a></p>
                           </figcaption>
                           <img src="images/portfolio/myweb/rafa.jpg" alt=""/></figure>
