--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                             <h5>FITNEX</h5>
                             <span>Senior Developer</span>
                             <p style="text-transform: none;">Some features are : Sport/Diet programs with calendar / Maps / Social Network ( text/picture/voice messaging ) / News / ... </p>
-                            <p> <a href="https://play.google.com/store/apps/details?id=air.com.fitnex.club&hl=en" ><img class="appstore" src="images/googleplay.png" height="45" width="129" /></a></p>
+                            <p> <a href="https://play.google.com/store/apps/details?id=air.com.fitnex.club&hl=en" >Get It for Android</a></p>
                           </figcaption>
                           <div id="owl-demo1" class="owl-carousel">
                             <div class="item"><img src="images/portfolio/fitnex/fit1.jpg" alt="" /></div>
@@ -451,7 +451,7 @@
                           <figcaption>
                             <h3>DrWin</h3>
                             <span>App Developer</span>
-                            <p> <a href="https://play.google.com/store/apps/details?id=air.iparsmedia.drwin" ><img class="appstore" src="images/googleplay.png" height="45" width="129" /></a></p>
+                            <p> <a href="https://play.google.com/store/apps/details?id=air.iparsmedia.drwin" >Get It for Android</a></p>
                           </figcaption>
                           <img src="images/portfolio/drwin/1.jpg" alt="" />
                           
@@ -462,7 +462,7 @@
                           <figcaption>
                             <h5>FoderArt</h5>
                             <span>App Developer/Designer</span>
-                            <p><a href="https://play.google.com/store/apps/details?id=air.com.samshariat.seatcover" ><img class="appstore" src="images/googleplay.png" height="45" width="129" /></a></p>
+                            <p><a href="https://play.google.com/store/apps/details?id=air.com.samshariat.seatcover" >Get It for Android</a></p>
                           </figcaption>
                           <img src="images/portfolio/foderart/1.jpg" alt=""/></figure>
                       </li>
@@ -491,7 +491,7 @@
                           <figcaption>
                             <h5>Primewell</h5>
                             <span>App Developer</span>
-                             <p><a href="https://apkpure.com/primewell-iran/air.com.iparsmedia.primewell" ><img src="images/googleplay.png" class="appstore" height="45" width="129" /></a></p>
+                             <p><a href="https://apkpure.com/primewell-iran/air.com.iparsmedia.primewell" >Get It for Android</a></p>
                           </figcaption>
                           <img src="images/portfolio/primewell/primewell.jpg" alt=""/></figure>
                       </li>
@@ -510,7 +510,7 @@
                           <figcaption>
                             <h5>Dart</h5>
                             <span>App Developer</span>
-                             <p><a href="https://apkgk.com/air.com.iparsmedia.dart" ><img class="appstore" src="images/googleplay.png" height="45" width="129" /></a></p>
+                             <p><a href="https://apkgk.com/air.com.iparsmedia.dart" >Get It for Android</a></p>
                           </figcaption>
                           <img src="images/portfolio/myweb/dart.jpg" alt=""/></figure>
                       </li>
