--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                           <figcaption>
                             <h5>HezarAzmoon IELTS Simulator</h5>
                             <span>App Developer</span>
-                             <p><a href="http://hezarazmoon.com" ><img class="appstore" src="images/googleplay.png" height="45" width="129" /></a></p>
+                             <p><a href="http://hezarazmoon.com" >WebApp / Android / iOS</a></p>
                           </figcaption>
                           <img src="images/portfolio/myweb/hezarazmoon.jpg" alt=""/></figure>
                       </li>
