--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <ul>
               <li>Name: Moslem Shariat (Sam)</li>
               <li>Email: <a href="mailto:moslem.shariat@gmail.com">moslem.shariat@gmail.com</a></li>
-		    <li><a href="tel:+989120284414" >Phone: +98 (912) - 028-4414</a></li>
+		    <li><a href="tel:+989336205144" >Phone: +98 (933)620-5144</a></li>
               <li>Date of birth: 24 February 1993</li>
               <li>Address: Tehran</li>
             </ul>
@@ -567,7 +567,7 @@
                     <div class="contact-text">
                       <div class="col-2 icon-block phone"><i class="fa fa-phone"></i></div>
                       <div class="flot-left"> <strong>Phone</strong><br>
-			      <a href="tel:+989120284414">+98 (912) 028 4414 </a></div>
+			      <a href="tel:+989336205144">+98 (933) 620 5144 </a></div>
                     </div>
                     <div class="contact-text">
                       <div class="col-2 icon-block email"><i class="fa fa-envelope"></i></div>
